Rename to block_header.{h,cpp}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ message(${PQ_LIBRARIES} ${PQXX_LIBRARIES})
 add_executable(${PROJECT_NAME}
     assets.cpp
     blockchain_state.cpp
-    blockheader.cpp
+    block_header.cpp
     block_header_validator.cpp
     lisk.cpp
     log.cpp
