--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ message(${PQ_LIBRARIES} ${PQXX_LIBRARIES})
 add_executable(${PROJECT_NAME}
     assets.cpp
     blockchain_state.cpp
+    blockchain_state_validator.cpp
     block_header.cpp
     block_header_validator.cpp
     lisk.cpp
