--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: cpp
 dist: trusty
 sudo: required
 
+addons:
+  postgresql: "9.5" # Default on Ubuntu 16.04
+
 install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -q
